syntax = "proto3";

service Keanu {
  rpc ListMovies (Empty) returns (MovieList) {}
  rpc InsertMovies (Movie) returns (Empty) {}
  // rpc GetMovie (MovieIdRequest) returns (Movie) {}
  // rpc DeleteMovie (MovieIdRequest) returns (Empty) {}
  rpc StreamMovies (Empty) returns (stream Movie) {}
}

message Empty {}

// message MovieIdRequest {
//   int32 id = 1;
// }

message Movie {
  int32 id = 1;
  string title = 2;
  string director = 3;
}

message MovieList {
  repeated Movie movies = 1;
}